@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ADDED: library(persistent_frame) defining a class with the same name that
+  realises a frame remembering its position, size and subwindow layout.
+
 * FIXED: May issues around frame<->geometry.  At least on the X11 version,
   <->geometry now queries and restores the geometry correctly.
 
